<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masuk"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />
        <TextView
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/masuk_dengan_google"
            tools:ignore="SpUsage,UnusedAttribute"
            android:padding="15dp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:background="@drawable/third_party_button_background"
            app:drawableLeftCompat="@drawable/google_ic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_title"
            android:layout_marginTop="27dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            tools:targetApi="m" />
        <TextView
            android:id="@+id/facebook_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/masuk_dengan_facebook"
            tools:ignore="SpUsage,UnusedAttribute"
            android:padding="15dp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:background="@drawable/third_party_button_background"
            app:drawableLeftCompat="@drawable/facebook_ic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/google_button"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            tools:targetApi="m" />
        <View
            android:id="@+id/divider_view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/facebook_button"
            android:background="@color/whisper"/>
        <TextView
            android:id="@+id/or_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atau"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="@id/divider_view"
            app:layout_constraintBottom_toBottomOf="@id/divider_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_edit_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/or_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textSize="16dp"
                android:hint="@string/username_or_email"
                android:inputType="text"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                tools:ignore="SpUsage" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edit_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_edit_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/password"
                android:textSize="16dp"
                android:inputType="textPassword"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                tools:ignore="SpUsage" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/forgot_password_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lupa_password"
            android:textColor="@color/eucalyptus"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_edit_layout"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            android:layout_marginRight="25dp"
            android:paddingBottom="25dp"
            android:layout_marginTop="15dp"
            tools:ignore="SpUsage"
            android:layout_marginEnd="25dp" />
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_view"
            android:padding="15dp"
            android:textAllCaps="false"
            android:textSize="16dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            tools:ignore="SpUsage" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/finger_print_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="16dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/eucalyptus"
            android:text="@string/masuk_dengan_fingerprint"
            android:background="@drawable/background_with_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            android:padding="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            tools:ignore="SpUsage" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:paddingBottom="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/finger_print_button">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_punya_akun"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/black"
                tools:ignore="SpUsage" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daftar_sekarang"
                android:textStyle="bold"
                android:textSize="14dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/eucalyptus"
                tools:ignore="SpUsage" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>